--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>VideoCallApp</title>
+  <title>ŠVARBA s.r.o.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://meet.jit.si/external_api.js"></script>
 </body>
 </html>
